<resources>
    <string name="app_name">Hermes SMS İletici</string>
    <string name="description_text">Gelen tüm SMS mesajlarını belirlediğiniz telefon numarasına otomatik olarak yönlendirir.</string>
    <string name="target_number_label">Hedef Telefon Numarası:</string>
    <string name="target_number_hint">Örnek: +905551234567</string>
    <string name="save_button">Kaydet ve Başlat</string>
    <string name="status_not_configured">Durum: Yapılandırılmamış</string>
    <string name="status_configured">Durum: Aktif - Yönlendirme çalışıyor</string>
    <string name="success_saved">Ayarlar kaydedildi!</string>
    <string name="validation_empty_number">Telefon numarası boş olamaz</string>
    <string name="validation_missing_country_code">Ülke kodu eksik (örn: +90)</string>
    <string name="validation_too_short">Telefon numarası çok kısa</string>
    <string name="validation_too_long">Telefon numarası çok uzun</string>
    <string name="validation_invalid_format">Geçersiz telefon numarası formatı</string>
    <string name="validation_success">Geçerli telefon numarası</string>
    <string name="single_sim_device_info">Bu cihaz tek SIM destekliyor</string>
    <string name="filter_help_title">Filtre Türleri Hakkında</string>
    <string name="filter_help_content">
<b>KELİME BAZLI (KEYWORD)</b><br/>
SMS içeriğinde belirli kelime veya cümleleri arar.<br/>
Örnek: \"banka\" kelimesi geçen SMS\'leri engelle<br/><br/>

<b>GÖNDEREN NUMARASI (SENDER_NUMBER)</b><br/>
Belirli telefon numaralarından gelen SMS\'leri filtreler.<br/>
Örnek: \"+905551234567\" numarasından gelen SMS\'leri izin ver<br/><br/>

<b>İZİN LİSTESİ (WHITELIST)</b><br/>
Sadece izin verilen gönderenlerden SMS\'leri iletir.<br/>
Örnek: Sadece \"Ahmet\" veya \"İş\" geçen SMS\'leri ilet<br/><br/>

<b>ENGEL LİSTESİ (BLACKLIST)</b><br/>
Belirli gönderenlerden gelen SMS\'leri engeller.<br/>
Örnek: \"Reklam\" veya \"Spam\" geçen SMS\'leri engelle<br/><br/>

<b>SIM BAZLI (SIM_BASED)</b><br/>
Hangi SIM kartından gelen SMS\'lerin işleneceğini belirler.<br/>
Örnekler:<br/>
• \"slot:0\" - Sadece SIM 1\'den gelen SMS\'ler<br/>
• \"turkcell\" - Turkcell SIM\'inden gelen SMS\'ler<br/>
• \"vodafone\" - Vodafone SIM\'inden gelen SMS\'ler<br/><br/>

<b>İŞLEM TİPLERİ:</b><br/>
• <b>İZİN VER (ALLOW):</b> Filtre eşleşirse SMS\'i ilet<br/>
• <b>ENGELLE (BLOCK):</b> Filtre eşleşirse SMS\'i engelle<br/><br/>

<b>REGEX:</b> Gelişmiş kalıp eşleştirme için regex kullanabilirsiniz.
    </string>
    <string name="settings_title">Ayarlar</string>
    <string name="settings_menu_title">Ayarlar</string>
    <string name="settings_category_forwarding">SMS Yönlendirme</string>
    <string name="settings_category_notifications">Bildirimler</string>
    <string name="settings_category_advanced">Gelişmiş Ayarlar</string>
    <string name="settings_category_about">Hakkında</string>
    <string name="settings_forwarding_enabled_title">SMS Yönlendirmeyi Etkinleştir</string>
    <string name="settings_forwarding_enabled_summary">Gelen SMS\'lerin otomatik olarak yönlendirilmesini aktif eder</string>
    <string name="settings_sms_format_title">SMS Format Stili</string>
    <string name="settings_sms_format_summary">Yönlendirilen SMS\'lerin nasıl formatlanacağını seçin</string>
    <string name="settings_forwarding_delay_title">Yönlendirme Gecikmesi</string>
    <string name="settings_forwarding_delay_summary">SMS yönlendirmeden önce beklenecek süre</string>
    <string name="settings_forwarding_delay_format">%d saniye gecikme</string>
    <string name="settings_forwarding_delay_instant">Anında gönder (gecikme yok)</string>
    <string name="settings_notifications_enabled_title">Bildirimleri Göster</string>
    <string name="settings_notifications_enabled_summary">SMS yönlendirme işlemleri için bildirim göster</string>
    <string name="settings_notification_sound_title">Bildirim Sesi</string>
    <string name="settings_notification_sound_summary">Yönlendirme bildirimlerinde ses çıkar</string>
    <string name="settings_notification_vibration_title">Titreşim</string>
    <string name="settings_notification_vibration_summary">Yönlendirme bildirimlerinde titreşim yap</string>
    <string name="settings_missed_call_notifications_title">Cevapsız Çağrı Bildirimleri</string>
    <string name="settings_missed_call_notifications_summary">Cevapsız çağrıları SMS ile hedef numaralara bildir</string>
    <string name="missed_call_notification_title">Cevapsız Çağrı</string>
    <string name="missed_call_caller_label">Arayan:</string>
    <string name="missed_call_time_label">Zaman:</string>
    <string name="missed_call_status_not_answered">Cevaplanmadı</string>
    <string name="missed_call_compact_prefix">Cevapsız çağrı:</string>
    <string name="missed_call_detailed_title">CEVAPSIZ ÇAĞRI</string>
    <string name="missed_call_caller_icon_label">Arayan:</string>
    <string name="missed_call_time_icon_label">Zaman:</string>
    <string name="missed_call_status_icon_label">Durum:</string>
    <string name="default_missed_call_template">{HEADER}\nCevapsız Arama\nArayan: {CALLER}\nSaat: {TIME}</string>
    <string name="settings_log_level_title">Log Seviyesi</string>
    <string name="settings_log_level_summary">Hangi seviyede log kayıtlarının tutulacağını seçin</string>
    <string name="settings_backup_title">Ayarları Yedekle</string>
    <string name="settings_backup_summary">Mevcut ayarları dosyaya kaydet</string>
    <string name="settings_restore_title">Ayarları Geri Yükle</string>
    <string name="settings_restore_summary">Daha önce kaydedilmiş ayarları geri yükle</string>
    <string name="settings_version_title">Uygulama Sürümü</string>
    <string name="settings_version_summary">Hermes SMS Forward</string>
    <string name="settings_developer_title">Geliştirici</string>
    <string name="settings_developer_summary">Kerem GÖK</string>
    <string-array name="sms_format_entries">
        <item>Standart Format</item>
        <item>Kompakt Format</item>
        <item>Detaylı Format</item>
        <item>Özel Format</item>
    </string-array>
    <string-array name="sms_format_values">
        <item>standard</item>
        <item>compact</item>
        <item>detailed</item>
        <item>custom</item>
    </string-array>
    <string-array name="date_format_entries">
        <item>dd/MM/yyyy HH:mm:ss</item>
        <item>yyyy-MM-dd HH:mm:ss</item>
        <item>dd.MM.yyyy HH:mm</item>
        <item>MM/dd/yyyy h:mm a</item>
        <item>HH:mm dd/MM/yyyy</item>
    </string-array>
    <string-array name="date_format_values">
        <item>dd/MM/yyyy HH:mm:ss</item>
        <item>yyyy-MM-dd HH:mm:ss</item>
        <item>dd.MM.yyyy HH:mm</item>
        <item>MM/dd/yyyy h:mm a</item>
        <item>HH:mm dd/MM/yyyy</item>
    </string-array>
    <string name="settings_language_title">Uygulama Dili</string>
    <string name="settings_language_summary">Uygulamada kullanılacak dili seçin</string>
    <string name="history_title">SMS Geçmişi</string>
    <string name="history_menu_title">Geçmiş</string>
    <string name="history_empty_title">Henüz SMS geçmişi yok</string>
    <string name="history_empty_message">SMS yönlendirme başladığında geçmiş burada görünecek</string>
    <string name="history_empty_icon_description">Boş geçmiş simgesi</string>
    <string name="history_refresh_button">Yenile</string>
    <string name="history_scroll_to_top">Başa git</string>
    <string name="history_search_hint">Gönderen veya mesaj içeriğinde arama...</string>
    <string name="history_search_no_results">Arama sonucu bulunamadı</string>
    <string name="history_search_error">Arama sırasında hata oluştu</string>
    <string name="history_showing_successful">Sadece başarılı yönlendirmeler gösteriliyor</string>
    <string name="history_showing_failed">Sadece başarısız yönlendirmeler gösteriliyor</string>
    <string name="history_show_all">Tümünü Göster</string>
    <string name="history_filter_error">Filtreleme sırasında hata oluştu</string>
    <string name="history_load_error">Geçmiş yüklenirken hata oluştu</string>
    <string name="history_clear_title">Geçmişi Temizle</string>
    <string name="history_clear_message">Tüm SMS geçmişini silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.</string>
    <string name="history_clear_confirm">Sil</string>
    <string name="history_cleared_success">SMS geçmişi başarıyla temizlendi</string>
    <string name="history_clear_error">Geçmiş temizlenirken hata oluştu</string>
    <string name="cancel">İptal</string>
    <string name="history_original_message_label">Orijinal Mesaj:</string>
    <string name="history_target_label">Hedef:</string>
    <string name="history_error_label">Hata:</string>
    <string name="history_status_success">Başarılı</string>
    <string name="history_status_failed">Başarısız</string>
    <string name="history_status_icon_description">Durum simgesi</string>
    <string name="history_date_today">Bugün</string>
    <string name="history_date_yesterday">Dün</string>
    <string name="target_numbers_title">Hedef Numaralar</string>
    <string name="target_numbers_menu_title">Hedef Numaralar</string>
    <string name="target_numbers_description">SMS yönlendirme için birden fazla hedef numara ekleyebilirsiniz</string>
    <string name="add_new_target">Yeni Hedef Numara Ekle</string>
    <string name="phone_number_hint">Telefon Numarası</string>
    <string name="display_name_hint">Görünen İsim (opsiyonel)</string>
    <string name="set_as_primary">Ana hedef olarak ayarla</string>
    <string name="enabled">Etkin</string>
    <string name="add_target_number">Hedef Numara Ekle</string>
    <string name="existing_targets">Mevcut Hedef Numaralar</string>
    <string name="no_targets_configured">Henüz hiç hedef numara yapılandırılmamış</string>
    <string name="sending_mode">Gönderim Modu</string>
    <string name="target_delete">Sil</string>
    <string name="target_set_primary">Ana Yap</string>
    <string name="target_toggle_enabled">Etkinlik Durumunu Değiştir</string>
    <string name="target_primary_label">ANA</string>
    <string name="target_disabled_label">DEVRE DIŞI</string>
    <string name="target_duplicate_number">Bu telefon numarası zaten mevcut</string>
    <string name="target_add_success">Hedef numara başarıyla eklendi</string>
    <string name="target_add_error">Hedef numara eklenirken hata oluştu</string>
    <string name="target_update_success">Hedef numara güncellendi</string>
    <string name="add_new_filter">Yeni Filtre Ekle</string>
    <string name="filter_test_sender_hint">Test gönderen numarası girin</string>
    <string name="filter_test_message_hint">Test mesajı girin</string>
    <string name="filter_test_run">Testi Çalıştır</string>
    <string name="filter_name_hint">Filtre Adı</string>
    <string name="filter_type_label">Filtre Türü</string>
    <string name="filter_pattern_hint">Filtre Deseni</string>
    <string name="filter_action_label">Filtre Eylemi</string>
    <string name="action_allow">İzin Ver</string>
    <string name="action_block">Engelle</string>
    <string name="case_sensitive">Büyük/Küçük Harf Duyarlı</string>
    <string name="use_regex">Regex Kullan</string>
    <string name="custom_template_keys_title">Kullanılabilir Etiketler:</string>
    <string name="custom_template_keys_list">\{HEADER\} - Özel başlık\n\{SENDER\} - Gönderen numara\n\{MESSAGE\} - Orijinal mesaj\n\{TIME\} - Tarih ve saat\n\{SIM_INFO\} - SIM bilgileri\n\{APP_NAME\} - Uygulama adı</string>
    <string name="custom_template_input_label">Özel Şablon:</string>
    <string name="custom_template_hint">[\{HEADER\}]\nGönderen: \{SENDER\}\nMesaj: \{MESSAGE\}\nZaman: \{TIME\}\n\{SIM_INFO\}</string>
    <string name="custom_template_preview_title">Önizleme:</string>
    <string name="custom_template_preview_placeholder">Bir şablon girin ve Önizleme butonuna basın</string>
    <string name="preview_button">Önizleme</string>
    <string name="reset_button">Sıfırla</string>
</resources>