<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search -->
    <item
        android:id="@+id/action_search"
        android:title="@string/history_search_hint"
        android:orderInCategory="10"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        android:title="@string/history_refresh_button"
        android:orderInCategory="20"
        app:showAsAction="never" />

    <!-- Filter Success -->
    <item
        android:id="@+id/action_filter_success"
        android:title="@string/history_showing_successful"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <!-- Filter Failed -->
    <item
        android:id="@+id/action_filter_failed"
        android:title="@string/history_showing_failed"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <!-- Show All -->
    <item
        android:id="@+id/action_show_all"
        android:title="@string/history_show_all"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <!-- Clear History -->
    <item
        android:id="@+id/action_clear_history"
        android:title="@string/history_clear_title"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>